# Impact

./: CMakeLists.txt  README.md
src/: launcher.cpp
src/Antioch/: CMakeLists.txt  Makefile  cmake_install.cmake  msArrhenius.cpp  msArrhenius.h  msChemicalMixture.cpp  msChemicalMixture.h  msConstituent.cpp  msConstituent.h  msElementaryReaction.h  msKineticMechanism.cpp  msKineticMechanism.h  msKineticsType.cpp  msKineticsType.h  msMotionCEA.cpp  msMotionCEA.h  msReaction.cpp  msReaction.h  msReactionRate.cpp  msReactionRate.h  msThermoConstituent.cpp  msThermoConstituent.h  msThermoMixture.cpp  msThermoMixture.h  test.cpp~
src/Antioch/Widgets/: msChemicalMixtureWidget.py  msKineticsTypeWidget.py  msReactionElementaryWidget.py  msReactionFallOffWidget.py  msReactionRate.py  msReactionRateWidget.py  msReactionThreeBodyWidget.py  msReactionWidget.py  msThermoMixtureWidget.py
src/Atomism/: CMakeLists.txt  atomism.h
src/Atomism/AnalyticMechanics/: msElement.cpp  msElement.h  msEntity.cpp  msEntity.h  msIntegrandLagrangian.cpp  msIntegrandLagrangian.h  msKineticOperator.cpp  msKineticOperator.h  msLagrangian.cpp  msLagrangian.h  msMotion.cpp  msMotion.h  msMotionsContainer.cpp  msMotionsContainer.h  msSolverLagrangian.cpp  msSolverLagrangian.h  msSystem.cpp  msSystem.h  msVisualizerSystem.cpp  msVisualizerSystem.h
src/Atomism/AnalyticMechanics/Widgets/: msElementWidget.py  msEntityWidget.py  msKineticOperatorWidget.py  msLagrangianWidget.py  msMotionWidget.py  msSolverLagrangianWidget.py
src/Atomism/CMake_FindModules/: FindGSL.cmake
src/Atomism/Molecule/: .directory  msAtom.cpp  msAtom.h  msLinearRigidRotor.cpp  msLinearRigidRotor.h  msMolecule.cpp  msMolecule.h  msOscillator.cpp  msOscillator.h  msOscillatorsAssembly.cpp  msOscillatorsAssembly.h  msQuantumInterface.cpp  msQuantumInterface.h  msQuantumMotion1d.cpp  msQuantumMotion1d.h  msRigidRotor.cpp  msRigidRotor.h  msTranslation.cpp  msTranslation.h  msVisualizerZMat.cpp  msVisualizerZMat.h  msZMat.cpp  msZMat.h
src/Atomism/Molecule/Widgets/: msAtomWidget.py  msLinearRigidRotorWidget.py  msQuantumInterfaceWidget.py  msQuantumMotion1dWidget.py  msRigidRotorWidget.py  msZMatWidget.py
src/Base/: CMakeLists.txt  CMakeLists.txt~  msAttribute_Child.cpp  msAttribute_Child.h  msBaseTrackers.cpp  msBaseTrackers.h  msExceptions.cpp  msExceptions.h  msFileStream.cpp  msFileStream.h  msGeneralizedCoordinates.cpp  msGeneralizedCoordinates.h  msLoaderXml.cpp  msLoaderXml.h  msLogger.cpp  msLogger.h  msParamsManager.cpp  msParamsManager.h  msParser.cpp  msParser.h  msPhysicalInterface.cpp  msPhysicalInterface.h  msRegister.cpp  msRegister.h  msRegister.h~  msSampler.cpp  msSampler.h  msSamplerLinear.cpp  msSamplerLinear.h  msScalarFunction.cpp  msScalarFunction.h  msScalarVariable.cpp  msScalarVariable.h  msSolver.cpp  msSolver.h  msTracker.cpp  msTracker.h  msTreeMapper.cpp  msTreeMapper.h  msUnitsAbility.h  (+9 more)
src/Base/Widgets/: msExceptionWidget.py  msGeneralizedCoordinatesWidget.py  msParamsManagerWidget.py  msParserWidget.py  msPhysicalInterfaceWidget.py  msSamplerWidget.py  msScalarFunctionWidget.py  msScalarVariableWidget.py  msTreeMapperWidget.py  msUnitWidget.py  msUnitsManagerWidget.py  msWidget.py
src/GUI_MainWindow/: CMakeLists.txt  MainWindow.py  impact_gui.py
src/GUI_MainWindow/Dialogs/: ConfigurationWidget.py  PreferencesWidget.py  msMethodCallDialog.py  msNewObjectDialog.py  queryTreeMapperDialog.py  simpleDialogs.py
src/GUI_MainWindow/DockElements/: AttributsEditor.py  PythonConsole.py  PythonHighlighter.py  ScriptWidget.py  WidgetsContainer.py
src/GUI_MainWindow/LoadersSavers/: msXmlLoader.py  msXmlWritter.py
src/GUI_MainWindow/Misc/: Misc.py  msPlotter1D.py
src/GUI_MainWindow/ScriptTemplates/: Doxyfile.py  NewClassScriptTemplateWidget.py  newClassTemplate.py  newUiTemplate.py  uiNewGraphicScriptTemplate.py
src/GUI_MainWindow/TreeModels/: DataTreeWidget.py  DebugTreeWidget.py  TreeMapperModel.py  simpletreemodel.py
src/GUI_MainWindow/Widgets/: msPlotter1DWidget.py
src/Math/: CMakeLists.txt  impact_math.h  msConstantScalarFunction.cpp  msConstantScalarFunction.h  msDiracs.cpp  msDiracs.h  msLinearScalarFunction.cpp  msLinearScalarFunction.h  msMultiDiracs.cpp  msMultiDiracs.h  msPolynomial.cpp  msPolynomial.h  msRepromodel.cpp  msRepromodel.h  msSamplerExplicit.cpp  msSamplerExplicit.h  msSamplerRandom.cpp  msSamplerRandom.h  msScalarFunctionBasis.cpp  msScalarFunctionBasis.h  msStepFunction.cpp  msStepFunction.h
src/Math/Widgets/: msDiracsWidget.py  msMultiDiracsWidget.py  msSamplerExplicitWidget.py
src/Queso/: CMakeLists.txt  msInverseProblem.cpp  msInverseProblem.h  msLikeliNoCorrel.cpp  msLikeliNoCorrel.h  msLikeliNoCorrelAdd1Gaussian.cpp  msLikeliNoCorrelAdd1Gaussian.h  msLikelihood.cpp  msLikelihood.h  msParameterSpace.cpp  msParameterSpace.h  msPredictiveModel.cpp  msPredictiveModel.h  msScalarModel.cpp  msScalarModel.h  msUtilitiesBayes.cpp  msUtilitiesBayes.h
src/Queso/CMake_FindModules/: FindQueso.cmake
src/Queso/Widgets/: msInverseProblemWidget.py  msLikelihoodWidget.py  msPredictiveModelWidget.py
