cmake_minimum_required(VERSION 2.8)


FILE(GLOB  PYTHON_FILES 
            ${CMAKE_CURRENT_SOURCE_DIR}/*.py )
FILE(GLOB  PYTHON_DIALOGS
            ${CMAKE_CURRENT_SOURCE_DIR}/Dialogs/*.py )
FILE(GLOB  PYTHON_DOCK
                        ${CMAKE_CURRENT_SOURCE_DIR}/DockElements/*.py )
FILE(GLOB  PYTHON_LOADSAVE
                        ${CMAKE_CURRENT_SOURCE_DIR}/LoadersSavers/*.py )
FILE(GLOB  PYTHON_MISC
                        ${CMAKE_CURRENT_SOURCE_DIR}/Misc/*.py )
FILE(GLOB  PYTHON_SCRIPTTEMPLATES 
                        ${CMAKE_CURRENT_SOURCE_DIR}/ScriptTemplates/*.py )
FILE(GLOB  PYTHON_TREE
                        ${CMAKE_CURRENT_SOURCE_DIR}/TreeModels/*.py )
FILE(GLOB  PYTHON_WIDGETS
                        ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/*.py
       )


INSTALL(FILES  ${PYTHON_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/python )
INSTALL(FILES  ${PYTHON_DIALOGS} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/Dialogs )
INSTALL(FILES  ${PYTHON_DOCK} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/DockElements )
INSTALL(FILES  ${PYTHON_LOADSAVE} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/LoadersSavers )
INSTALL(FILES  ${PYTHON_MISC} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/Misc )
INSTALL(FILES  ${PYTHON_SCRIPTTEMPLATES} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/ScriptTemplates )
INSTALL(FILES  ${PYTHON_TREE} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/TreeModels )
INSTALL(FILES  ${PYTHON_WIDGETS} DESTINATION ${CMAKE_INSTALL_PREFIX}/python/widgets )


INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/impact_gui.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin )
